--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Concert+One&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-.custom-li {
-    @apply  hover:bg-gray-700 hover:text-white block px-3 py-2 rounded-md text-base font-medium ;
-}
